--- a/Wikibase.NET/WikiBase.csproj
+++ b/Wikibase.NET/WikiBase.csproj
@@ -73,6 +73,12 @@
   <ItemGroup>
     <None Include="vpproject\WikiBase.vpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\minimaljson.net\MinimalJson\MinimalJson.csproj">
+      <Project>{a77d0d6a-8b5d-43f0-9c83-b4733a0fbcd5}</Project>
+      <Name>MinimalJson</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
