--- a/Wikibase.NET/Wikibase.NET.csproj
+++ b/Wikibase.NET/Wikibase.NET.csproj
@@ -17,11 +17,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
     <PackageReference Include="System.Net.Http" Version="4.3.1" />
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\minimaljson.net\MinimalJson\MinimalJson.csproj" />
-  </ItemGroup>
 
 </Project>
