preparing for release as Wikibase.netcore

--- a/Wikibase.netcore/Wikibase.netcore.csproj
+++ b/Wikibase.netcore/Wikibase.netcore.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net45;netcoreapp2.0</TargetFrameworks>
-    <AssemblyName>Wikibase.NET</AssemblyName>
-    <PackageId>Wikibase.NET</PackageId>
+    <TargetFrameworks>netcoreapp2.0</TargetFrameworks>
+    <AssemblyName>Wikibase.netcore</AssemblyName>
+    <PackageId>Wikibase.netcore</PackageId>
     <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
     <GenerateAssemblyDescriptionAttribute>false</GenerateAssemblyDescriptionAttribute>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
